Implementing Local Gameplay

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="gamebox">
 			<canvas id="canvas"></canvas>
 		</div>
-		<div class="chatbox">
+		<div id="chat" class="chatbox">
 			<div class="bubble me">Hallo Spieler</div>
 			<div class="bubble you">Du spielst Mensch Ärgere dich nicht!</div>
 		</div>
